# host_platform

./: BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod  constraints.bzl  extensions.bzl  utils.bzl
internal/: BUILD.bazel  BUILD.bazel.tpl  extensions.bzl  utils.bzl
tests/bcr/: .bazelrc  BUILD.bazel  MODULE.bazel  constraints.bzl  print_host_constraints.bzl  tests.bzl
tests/bcr/foo/: BUILD.bazel  MODULE.bazel  constraints.bzl
