load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")
load(":tests.bzl", "verify_constraint")

package(default_visibility = ["//visibility:public"])

constraint_setting(
    name = "main_repo_setting",
)

constraint_value(
    name = "main_repo_constraint",
    constraint_setting = ":main_repo_setting",
)

verify_constraint(
    name = "verify_constraint",
)

bzl_library(
    name = "bzl_files",
    srcs = [
        "@host_platform//:bzl_files",
    ],
)

stardoc(
    name = "docs",
    out = "docs.md",
    input = "print_host_constraints.bzl",
    deps = [":bzl_files"],
)

exports_files(["constraints.bzl"])
